@@ -8,7 +8,9 @@ import org.jetbrains.annotations.NotNull;
 
 import javax.annotation.concurrent.ThreadSafe;
 import java.util.Collection;
+import java.util.Collections;
 import java.util.Iterator;
+import java.util.LinkedHashMap;
 import java.util.Map;
 import java.util.Set;
 import java.util.Spliterator;
@@ -27,12 +29,13 @@ public final class PropertyContainerSnapshot implements IPropertyHolderConst, IP
 {
     @Getter(AccessLevel.PACKAGE)
     private final Map<String, IPropertyValue<?>> propertyMap;
+    @Getter(AccessLevel.PACKAGE)
     private final Set<PropertyValuePair<?>> propertySet;
 
     PropertyContainerSnapshot(Map<String, IPropertyValue<?>> propertyMap)
     {
-        this.propertyMap = Map.copyOf(propertyMap);
-        this.propertySet = PropertyContainer.getNewPropertySet(propertyMap);
+        this.propertyMap = Collections.unmodifiableMap(new LinkedHashMap<>(propertyMap));
+        this.propertySet = PropertyContainer.getNewPropertySet(this.propertyMap);
     }
 
     @Override
@@ -53,6 +56,12 @@ public final class PropertyContainerSnapshot implements IPropertyHolderConst, IP
     public boolean hasProperties(Collection<Property<?>> properties)
     {
         return PropertyContainer.hasProperties(propertyMap, properties);
+    }
+
+    @Override
+    public int propertyCount()
+    {
+        return propertyMap.size();
     }
 
     /**
